// Code generated by skv2. DO NOT EDIT.

syntax = "proto3";
package rpc.edge.gloo.solo.io;
option go_package = "github.com/solo-io/solo-projects/projects/apiserver/pkg/api/rpc.edge.gloo/v1";

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;
import "github.com/solo-io/solo-apis/api/gloo/gateway/v1/gateway.proto";
import "github.com/solo-io/solo-apis/api/gloo/gateway/v1/matchable_http_gateway.proto";
import "github.com/solo-io/solo-apis/api/gloo/gateway/v1/virtual_service.proto";
import "github.com/solo-io/solo-apis/api/gloo/gateway/v1/route_table.proto";
import "github.com/solo-io/skv2/api/core/v1/core.proto";
import "github.com/solo-io/solo-projects/projects/apiserver/api/rpc.edge.gloo/v1/common.proto";

message Gateway {
    .rpc.edge.gloo.solo.io.ObjectMeta metadata = 1;
    .gateway.solo.io.GatewaySpec spec = 2;
    .gateway.solo.io.GatewayStatus status = 3;
    .core.skv2.solo.io.ObjectRef gloo_instance = 4;
}

message MatchableHttpGateway {
    .rpc.edge.gloo.solo.io.ObjectMeta metadata = 1;
    .gateway.solo.io.MatchableHttpGatewaySpec spec = 2;
    .gateway.solo.io.MatchableHttpGatewayStatus status = 3;
    .core.skv2.solo.io.ObjectRef gloo_instance = 4;
}

message VirtualService {
    .rpc.edge.gloo.solo.io.ObjectMeta metadata = 1;
    .gateway.solo.io.VirtualServiceSpec spec = 2;
    .gateway.solo.io.VirtualServiceStatus status = 3;
    .core.skv2.solo.io.ObjectRef gloo_instance = 4;
}

message RouteTable {
    .rpc.edge.gloo.solo.io.ObjectMeta metadata = 1;
    .gateway.solo.io.RouteTableSpec spec = 2;
    .gateway.solo.io.RouteTableStatus status = 3;
    .core.skv2.solo.io.ObjectRef gloo_instance = 4;
}

message ListGatewaysRequest {
    .core.skv2.solo.io.ObjectRef gloo_instance_ref = 1;
    .rpc.edge.gloo.solo.io.Pagination pagination = 2;
    string query_string = 3;
    .rpc.edge.gloo.solo.io.StatusFilter status_filter = 4;
    .rpc.edge.gloo.solo.io.SortOptions sort_options = 5;
}

message ListGatewaysResponse {
    repeated Gateway gateways = 1;
    int32 total = 2;
}

message GetGatewayYamlRequest {
    .core.skv2.solo.io.ClusterObjectRef gateway_ref = 1;
}

message GetGatewayYamlResponse {
    .rpc.edge.gloo.solo.io.ResourceYaml yaml_data = 1;
}

message ListMatchableHttpGatewaysRequest {
    .core.skv2.solo.io.ObjectRef gloo_instance_ref = 1;
    .rpc.edge.gloo.solo.io.Pagination pagination = 2;
    string query_string = 3;
    .rpc.edge.gloo.solo.io.StatusFilter status_filter = 4;
    .rpc.edge.gloo.solo.io.SortOptions sort_options = 5;
}

message ListMatchableHttpGatewaysResponse {
    repeated MatchableHttpGateway matchable_http_gateways = 1;
    int32 total = 2;
}

message GetMatchableHttpGatewayYamlRequest {
    .core.skv2.solo.io.ClusterObjectRef matchable_http_gateway_ref = 1;
}

message GetMatchableHttpGatewayYamlResponse {
    .rpc.edge.gloo.solo.io.ResourceYaml yaml_data = 1;
}

message ListVirtualServicesRequest {
    .core.skv2.solo.io.ObjectRef gloo_instance_ref = 1;
    .rpc.edge.gloo.solo.io.Pagination pagination = 2;
    string query_string = 3;
    .rpc.edge.gloo.solo.io.StatusFilter status_filter = 4;
    .rpc.edge.gloo.solo.io.SortOptions sort_options = 5;
}

message ListVirtualServicesResponse {
    repeated VirtualService virtual_services = 1;
    int32 total = 2;
}

message GetVirtualServiceYamlRequest {
    .core.skv2.solo.io.ClusterObjectRef virtual_service_ref = 1;
}

message GetVirtualServiceYamlResponse {
    .rpc.edge.gloo.solo.io.ResourceYaml yaml_data = 1;
}

message ListRouteTablesRequest {
    .core.skv2.solo.io.ObjectRef gloo_instance_ref = 1;
    .rpc.edge.gloo.solo.io.Pagination pagination = 2;
    string query_string = 3;
    .rpc.edge.gloo.solo.io.StatusFilter status_filter = 4;
    .rpc.edge.gloo.solo.io.SortOptions sort_options = 5;
}

message ListRouteTablesResponse {
    repeated RouteTable route_tables = 1;
    int32 total = 2;
}

message GetRouteTableYamlRequest {
    .core.skv2.solo.io.ClusterObjectRef route_table_ref = 1;
}

message GetRouteTableYamlResponse {
    .rpc.edge.gloo.solo.io.ResourceYaml yaml_data = 1;
}

service GatewayResourceApi {

    rpc ListGateways (ListGatewaysRequest) returns (ListGatewaysResponse) {}
    rpc GetGatewayYaml (GetGatewayYamlRequest) returns (GetGatewayYamlResponse) {}

    rpc ListMatchableHttpGateways (ListMatchableHttpGatewaysRequest) returns (ListMatchableHttpGatewaysResponse) {}
    rpc GetMatchableHttpGatewayYaml (GetMatchableHttpGatewayYamlRequest) returns (GetMatchableHttpGatewayYamlResponse) {}

    rpc ListVirtualServices (ListVirtualServicesRequest) returns (ListVirtualServicesResponse) {}
    rpc GetVirtualServiceYaml (GetVirtualServiceYamlRequest) returns (GetVirtualServiceYamlResponse) {}

    rpc ListRouteTables (ListRouteTablesRequest) returns (ListRouteTablesResponse) {}
    rpc GetRouteTableYaml (GetRouteTableYamlRequest) returns (GetRouteTableYamlResponse) {}
}